<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.bibleknowledgequiz.HomeScreen">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bible_background" />

    <RelativeLayout
        android:id="@+id/home_status_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/view_shape_1">

        <TextView
            android:id="@+id/status_bar_text"
            style="@style/TextHeader"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name" />

        <ImageView
            android:id="@+id/overflow_button"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_alignBottom="@id/status_bar_text"
            android:layout_marginLeft="16dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/three_lines_black_menu"
            android:clickable="true"
            android:onClick="showPopup"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/home_text"
        style="@style/homeText"
        android:layout_below="@id/home_status_bar"
        android:text="@string/home_text" />

    <LinearLayout
        style="@style/homeMenuLayout"
        android:layout_below="@id/home_text"
        android:orientation="vertical"
        android:theme="@style/homeMenuStyle">

        <TextView
            style="@style/homeMenuDimensions"
            android:layout_marginBottom="@dimen/home_menu_vertical_body_margin_1"
            android:text="@string/home_difficulty" />

        <RadioGroup
            android:id="@+id/home_difficulty_level_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/home_level_1_Button"
                style="@style/homeMenuDimensions"
                android:layout_marginRight="@dimen/home_space_btw_radio_buttons"
                android:text="@string/home_Level_1" />

            <RadioButton
                android:id="@+id/home_level_2_Button"
                style="@style/homeMenuDimensions"
                android:layout_marginLeft="@dimen/home_space_btw_radio_buttons"
                android:text="@string/home_Level_2" />
        </RadioGroup>

        <TextView
            style="@style/homeMenuDimensions"
            android:layout_marginBottom="@dimen/home_menu_vertical_body_margin_2"
            android:layout_marginTop="@dimen/home_menu_vertical_body_margin_4"
            android:text="@string/home_choose_no_of_questions" />

        <SeekBar
            android:id="@+id/home_seekbar_nr_of_questions"
            style="@style/homeMenuDimensions"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:max="7"
            android:theme="@style/Widget.AppCompat.SeekBar.Discrete" />

        <TextView
            android:id="@+id/home_number_of_questions"
            style="@style/homeMenuDimensions"
            android:text="@string/home_no_of_questions" />
    </LinearLayout>

    <Button
        android:id="@+id/home_startQuizButton"
        style="@style/homeButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button_start_quiz" />



</RelativeLayout>
